tests/core/snapshots/test-object-in-args.md_error.snap
---
source: tests/core/spec.rs
expression: errors
---
[
  {
    "message": "Query parameter must be a scalar",
    "trace": [
      "Query",
      "findEmployees",
      "@http"
    ],
    "description": null
  }
]
