tests/core/snapshots/test-omit-list.md_client.snap
---
source: tests/core/spec.rs
expression: formatted
---
type B {
  c: String
}

scalar Date

scalar Email

scalar Empty

scalar JSON

scalar PhoneNumber

type Query {
  foo: B
}

scalar Url

schema {
  query: Query
}
