tests/core/snapshots/test-on-response-body.md_0.snap
---
source: tests/core/spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "hello": {
        "name": "Leanne Graham - Changed by JS"
      }
    }
  }
}
