tests/core/snapshots/test-optional-key-skip-empty.md_0.snap
---
source: tests/core/spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "foos": [
        {
          "id": 1,
          "bar": {
            "id": 1
          }
        },
        {
          "id": 2,
          "bar": {
            "id": 2
          }
        }
      ]
    }
  }
}
