tests/core/snapshots/test-optional-key-skip-empty.md_client.snap
---
source: tests/core/spec.rs
expression: formatted
---
type Bar {
  id: Int
}

type Foo {
  bar: Bar
  id: Int!
  tag: String
}

type Query {
  foos: [Foo]
}

schema {
  query: Query
}
