tests/core/snapshots/test-params-as-body-with-list.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
---
schema @server(port: 8000) @upstream(baseURL: "http://jsonplaceholder.typicode.com") {
  query: Query
}

type Query {
  firstUser(id: Int, name: String, q: [Int!]!): User @http(body: "{{.args}}", method: "POST", path: "/users")
}

type User {
  id: Int
  name: String
  numbers: [Int]
}
